<resources>
    <string name="app_name">Game</string>
    <string name="setupAccount"><![CDATA[New to Game.\n Sign up for an account.]]></string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="name">Name</string>
    <string name="signup">Sign Up</string>
    <string name="loginMessage">Have an account.\n Login here.</string>
    <string name="take_profile_picture">TAKE PROFILE PICTURE</string>
    <string name="or">OR</string>
    <string name="submit">Submit</string>
    <string name="image_holder">image holder</string>
    <string name="camera">camera</string>
    <string name="folder">folder</string>
    <string name="skip">Skip</string>
    <string name="create_event">Create Event</string>
    <string name="create_community">Create Community</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="recom">recom</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="tab1">\@foryou</string>
    <string name="tab2">\@soccer4ever</string>
    <string name="empty"> </string>
    <string name="error_logout_message">Enable to logout. Check your internet connection.</string>
    <string name="error_logout">Error logging out:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="going">Going</string>
    <string name="no_date">No Date Message</string>
    <string name="no_title">No Title</string>
    <string name="no_address">No address provided</string>
    <string name="not_attend">Will not attend</string>
    <string name="profile_picture">Profile picture</string>
    <string name="address">Address</string>
    <string name="details">Details</string>
    <string name="error_events_query">\"Error querying events: \"</string>
    <string name="pattern_time">MM/dd/yyyy hh:mm</string>
    <string name="wrong_date_message">Wrong Date and Time input. Please follow the format.</string>
    <string name="no_address_message">You cannot create an event without an address.</string>
    <string name="description">Description</string>
    <string name="hh">hh</string>
    <string name="mm">mm</string>
    <string name="colon">:</string>
    <string name="slash">/</string>
    <string name="dd">dd</string>
    <string name="yyyy">yyyy</string>
    <string name="community">Community</string>
    <string name="mm_Uppercase">MM</string>
    <string name="title">Title</string>
    <string name="poster">Poster</string>
    <string name="share">Share</string>
    <string name="set_location">Set Location</string>
    <string name="app_label">Game</string>
    <string name="search_hint">Search for an event or community</string>
    <string name="event">event</string>
    <string name="view">View</string>
    <string name="marked_events">Marked events</string>
    <string name="created_events">Created events</string>
    <string name="following">Following</string>
    <string name="no_marked_events_message">No events marked going yet.</string>
    <string name="no_created_events">No Events created yet.</string>
    <string name="more">more</string>
    <string name="follow">Follow</string>
    <string name="event_title">Event Title</string>
    <string name="snippet">Snippet</string>
    <string name="map">map</string>
    <string name="grant_permission_request_message">Please Grant Permission</string>
    <string name="image">image</string>
    <string name="foryou">foryou</string>
    <string name="bookmark">bookmark</string>
    <string name="no_event_in_community">No events in this community</string>
    <string name="start_time">Start time</string>
    <string name="set_a_picture">Set a picture</string>
    <string name="set_location_with_dots">Set location</string>
    <string name="time">Time</string>
    <string name="date">date</string>
    <string name="date_hint">01/01/2021</string>
    <string name="time_hint">00:00</string>
    <string name="start_community">Start community</string>
    <string name="set_a_profile_picture">Set a profile picture</string>
    <string name="change_profile_image">Change profile image</string>
    <string name="error_loading_profile">Error while loading profile</string>
    <string name="was_not_following">Was not able to follow</string>
    <string name="cancel">Cancel</string>
    <string name="leave">Leave</string>
    <string name="message_before_unfollow">Are you sure you want to leave this community?</string>
    <string name="clear_button">clear button</string>
    <string name="bookmarked">bookmarked</string>
    <string name="not_bookmarked">not bookmarked</string>
    <string name="fail_bookmark">Action on Bookmark failed.</string>
    <string name="close_button">Close Button</string>
</resources>
