<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPoster">

            <EditText
                android:id="@+id/etMonth"
                android:layout_width="@dimen/et_time_width"
                android:layout_height="@dimen/et_time_height"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/mm_Uppercase"
                android:inputType="textMultiLine"
                android:padding="0dp"
                android:importantForAutofill="no"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/etDay"
                android:layout_width="@dimen/et_time_width"
                android:layout_height="@dimen/et_time_height"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/dd"
                android:inputType="textMultiLine"
                android:padding="0dp"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash"
                android:textSize="@dimen/text_size_title" />

            <EditText
                android:id="@+id/etYear"
                android:layout_width="@dimen/et_time_width_large"
                android:layout_height="@dimen/et_time_height"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/yyyy"
                android:inputType="textMultiLine"
                android:padding="0dp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etHour"
                android:layout_width="@dimen/et_time_width"
                android:layout_height="@dimen/et_time_height"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hh"
                android:inputType="textMultiLine"
                android:padding="0dp"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textSize="@dimen/text_size_title" />

            <EditText
                android:id="@+id/etMinute"
                android:layout_width="@dimen/et_time_width"
                android:layout_height="@dimen/et_time_height"
                android:layout_marginEnd="@dimen/side_margin"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/mm"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="0dp"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="0dp"
            android:layout_height="@dimen/et_size"
            android:layout_marginTop="@dimen/side_margin"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textMultiLine"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@+id/titlePage" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="0dp"
            android:layout_height="@dimen/et_size"
            android:layout_marginTop="@dimen/side_margin"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@+id/etTitle" />

        <ImageButton
            android:id="@+id/ibFile"
            android:layout_width="@dimen/ib_width"
            android:layout_height="@dimen/ib_width"
            android:layout_marginTop="@dimen/side_margin"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/folder"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_folder_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDescription" />

        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibFile"
            app:srcCompat="@drawable/ic_baseline_image_24"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/poster"
            tools:srcCompat="@drawable/ic_baseline_image_24" />

        <ImageButton
            android:id="@+id/ibLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side_margin"
            android:backgroundTint="@color/white"
            android:foregroundGravity="center"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/set_location"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autoTvCommunity" />

        <TextView
            android:id="@+id/titlePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="@dimen/side_margin"
            android:text="@string/create_event"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAddressDisplay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side_margin"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibLoc" />

        <AutoCompleteTextView
            android:id="@+id/autoTvCommunity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side_margin"
            android:hint="@string/community"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddressDisplay" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
